@@ -1,99 +1,140 @@
 package com.markovic.javazadanie.fx;
 
-import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import com.fasterxml.jackson.databind.node.ObjectNode;
+
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.util.ArrayList;
 import java.util.List;
 
 public class GroupApiClient {
 
     private static final String BASE_URL = "http://localhost:8080/api/groups";
-    private final ObjectMapper mapper = new ObjectMapper();
 
-    public List<StudyGroupItem> getGroups(String token) throws IOException {
-        URL url = new URL(BASE_URL);
-        HttpURLConnection conn = createConnection(url, "GET", token);
-        int status = conn.getResponseCode();
-        InputStream is = status >= 200 && status < 300 ? conn.getInputStream() : conn.getErrorStream();
-        String body = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+    private final HttpClient httpClient = HttpClient.newHttpClient();
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
-        if (status >= 200 && status < 300) {
-            return mapper.readValue(body, new TypeReference<List<StudyGroupItem>>() {});
-        } else {
-            throw new IOException("Failed to load groups: " + status + " " + body);
+    // === GET /api/groups ===
+    public List<StudyGroupItem> getAllGroups(String token) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(BASE_URL))
+                .header("Authorization", "Bearer " + token)
+                .GET()
+                .build();
+
+        HttpResponse<String> response =
+                httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+
+        if (response.statusCode() != 200) {
+            throw new RuntimeException("Failed to load groups: " +
+                    response.statusCode() + " " + response.body());
         }
+
+        JsonNode arr = objectMapper.readTree(response.body());
+        List<StudyGroupItem> result = new ArrayList<>();
+
+        if (arr.isArray()) {
+            for (JsonNode node : arr) {
+                Long id = node.has("id")
+                        ? node.get("id").asLong()
+                        : node.get("groupId").asLong();
+
+                String name = node.has("name") ? node.get("name").asText() : "";
+                String description = node.has("description") ? node.get("description").asText() : "";
+
+                result.add(new StudyGroupItem(id, name, description));
+            }
+        }
+
+        return result;
     }
 
-    public StudyGroupItem createGroup(String token, String name, String description) throws IOException {
-        URL url = new URL(BASE_URL);
-        HttpURLConnection conn = createConnection(url, "POST", token);
-        conn.setDoOutput(true);
-
-        String json = mapper.createObjectNode()
+    // === POST /api/groups ===
+    public StudyGroupItem createGroup(String token, String name, String description) throws Exception {
+        ObjectNode body = objectMapper.createObjectNode()
                 .put("name", name)
-                .put("description", description)
-                .toString();
+                .put("description", description);
 
-        conn.getOutputStream().write(json.getBytes(StandardCharsets.UTF_8));
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(BASE_URL))
+                .header("Authorization", "Bearer " + token)
+                .header("Content-Type", "application/json")
+                .POST(HttpRequest.BodyPublishers.ofString(body.toString()))
+                .build();
 
-        int status = conn.getResponseCode();
-        InputStream is = status >= 200 && status < 300 ? conn.getInputStream() : conn.getErrorStream();
-        String body = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+        HttpResponse<String> response =
+                httpClient.send(request, HttpResponse.BodyHandlers.ofString());
 
-        if (status >= 200 && status < 300) {
-            return mapper.readValue(body, StudyGroupItem.class);
-        } else {
-            throw new IOException("Failed to create group: " + status + " " + body);
+        if (response.statusCode() != 200 && response.statusCode() != 201) {
+            throw new RuntimeException("Failed to create group: " +
+                    response.statusCode() + " " + response.body());
         }
+
+        JsonNode node = objectMapper.readTree(response.body());
+
+        Long id = node.has("id")
+                ? node.get("id").asLong()
+                : node.get("groupId").asLong();
+
+        String respName = node.has("name") ? node.get("name").asText() : name;
+        String respDesc = node.has("description") ? node.get("description").asText() : description;
+
+        return new StudyGroupItem(id, respName, respDesc);
     }
 
-    public void joinGroup(String token, Long groupId) throws IOException {
-        URL url = new URL(BASE_URL + "/" + groupId + "/join");
-        HttpURLConnection conn = createConnection(url, "POST", token);
-        conn.setDoOutput(true);
+    // === PUT /api/groups/{id} ===
+    public StudyGroupItem updateGroup(String token, Long groupId,
+                                      String name, String description) throws Exception {
 
-        int status = conn.getResponseCode();
-        if (status < 200 || status >= 300) {
-            String error = new String(conn.getErrorStream().readAllBytes(), StandardCharsets.UTF_8);
-            throw new IOException("Failed to join group: " + status + " " + error);
+        ObjectNode body = objectMapper.createObjectNode()
+                .put("name", name)
+                .put("description", description);
+
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(BASE_URL + "/" + groupId))
+                .header("Authorization", "Bearer " + token)
+                .header("Content-Type", "application/json")
+                .PUT(HttpRequest.BodyPublishers.ofString(body.toString()))
+                .build();
+
+        HttpResponse<String> response =
+                httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+
+        if (response.statusCode() != 200) {
+            throw new RuntimeException("Failed to update group: " +
+                    response.statusCode() + " " + response.body());
         }
+
+        JsonNode node = objectMapper.readTree(response.body());
+
+        Long id = node.has("id")
+                ? node.get("id").asLong()
+                : node.get("groupId").asLong();
+
+        String respName = node.has("name") ? node.get("name").asText() : name;
+        String respDesc = node.has("description") ? node.get("description").asText() : description;
+
+        return new StudyGroupItem(id, respName, respDesc);
     }
 
-    public void leaveGroup(String token, Long groupId) throws IOException {
-        URL url = new URL(BASE_URL + "/" + groupId + "/leave");
-        HttpURLConnection conn = createConnection(url, "POST", token);
-        conn.setDoOutput(true);
+    // === DELETE /api/groups/{id} ===
+    public void deleteGroup(String token, Long groupId) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(BASE_URL + "/" + groupId))
+                .header("Authorization", "Bearer " + token)
+                .DELETE()
+                .build();
 
-        int status = conn.getResponseCode();
-        if (status < 200 || status >= 300) {
-            String error = new String(conn.getErrorStream().readAllBytes(), StandardCharsets.UTF_8);
-            throw new IOException("Failed to leave group: " + status + " " + error);
+        HttpResponse<String> response =
+                httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+
+        if (response.statusCode() != 200 && response.statusCode() != 204) {
+            throw new RuntimeException("Failed to delete group: " +
+                    response.statusCode() + " " + response.body());
         }
-    }
-
-    public void deleteGroup(String token, Long groupId) throws IOException {
-        URL url = new URL(BASE_URL + "/" + groupId);
-        HttpURLConnection conn = createConnection(url, "DELETE", token);
-
-        int status = conn.getResponseCode();
-        if (status < 200 || status >= 300) {
-            String error = new String(conn.getErrorStream().readAllBytes(), StandardCharsets.UTF_8);
-            throw new IOException("Failed to delete group: " + status + " " + error);
-        }
-    }
-
-    private HttpURLConnection createConnection(URL url, String method, String token) throws IOException {
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod(method);
-        conn.setRequestProperty("Accept", "application/json");
-        conn.setRequestProperty("Content-Type", "application/json");
-        if (token != null && !token.isEmpty()) {
-            conn.setRequestProperty("Authorization", "Bearer " + token);
-        }
-        return conn;
     }
 }
